2000-09-27  Larry Jones  <larry.jones@sdrc.com> 

	* sanity.sh (find_tool): Correct method of checking for GNU tools.

	* checkout.c (checkout_proc): Match up user directories with
	repository directories instead of using Emptydir.
	* sanity.sh (cvsadm, emptydir): Update to match.

2000-09-19  Larry Jones  <larry.jones@sdrc.com> 

	* version.c: Push version number to 1.11.0.1.

	* version.c: Version 1.11.

2000-09-07  Larry Jones  <larry.jones@sdrc.com>

	* Makefile.in: Use @bindir@, @libdir@, @infodir@, and @mandir@
	from autoconf.

2000-08-23  Larry Jones  <larry.jones@sdrc.com>

	* mkmodules.c (init): Create an empty val-tags file if it doesn't
	already exist to avoid problems with users not having sufficient
	permissions to create it later.

2000-09-06  Jim Kingdon  <jkingdon@dhcp-net200-89.su.valinux.com>

	* main.c (lookup_command_attribute): Add "release" to commands
	which can be done by a read-only user.

2000-08-23  Larry Jones  <larry.jones@sdrc.com>

	* repos.c (Name_Repository): Use pathname_levels to detect attempts
	to get above the repository instead of checking for leading ..
	which isn't reliable.
	* sanity.sh (multiroot3-12 to multiroot3-15): New tests for above.

2000-08-21  Larry Jones  <larry.jones@sdrc.com>

	* rcs.c (expand_keywords): Handle the unusual case of log == NULL.
	(Reported by Craig Metz <cmetz@inner.net>.)

2000-08-01  Larry Jones  <larry.jones@sdrc.com>

	* subr.c (pathname_levels): Fix bug that miscounts adjacent
	slashes.
	(Patch submitted by Tanaka Akira <akr@m17n.org>.)

	* loginc.c (login): If available, use getpassphrase instead of
	getpass to support long passwords on Solaris.

2000-07-28  Larry Jones  <larry.jones@sdrc.com>

	* server.c (server_noop): Avoid do_cvs_command() overhead.
	(requests): Make noop RQ_ROOTLESS.

2000-07-27  Noel Cragg  <noel@red-bean.com>

	* root.c (parse_cvsroot): change fork method to behave like other
	remote methods -- let the server check that the repository