@@ -1,5 +1,9 @@
 2000-09-27  Larry Jones  <larry.jones@sdrc.com> 
 
+	* commit.c (commit): Don't sleep before returning in server mode,
+	just let the client do it.
+	* update.c (do_update): Ditto.
+
 	* sanity.sh (find_tool): Correct method of checking for GNU tools.
 
 	* checkout.c (checkout_proc): Match up user directories with
